[project]
name = "make-video"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers",
    "ftfy>=6.3.1",
    "moviepy>=2.2.1",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers" }
